--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -19,9 +19,10 @@
 <div class="maincontainer1">
     <div class="col-lg-12">
         <p style="font-size:x-large; text-align:center;">
-            Att hyra din bostad är en grym boendeform som kommer ge dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!
+            Att hyra din bostad är en grym boendeform som ger dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!
         </p>
-
+<br />
+        <br />
     </div>
     <div class="row">
         <div class="col-md-6 förstadiven">
@@ -79,15 +80,29 @@
               
             </div>
         <div class="col-md-4 facebook">
-            <p>
-                Genom att gilla var Facebooksida kan du hålla dig uppdaterad om vad som händer hos oss på John Ekströms Bygg AB.
-                <br />Lediga objekt och information till våra hyresgäster läggs ut på vår Facebooksida.
+            <p style="font-family: Tahoma; background-color: #e4e4e4; border-radius: 10px; box-shadow: 0px 0px 20px white; padding-left: 10px;">
+                Genom att gilla vår Facebooksida kan du hålla dig uppdaterad om vad som händer hos oss på John Ekströms Bygg AB.
+                Lediga objekt och information till våra hyresgäster läggs ut på vår Facebooksida.
             </p>
-            <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
+            <br />
+                <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
+            </div>
         </div>
+    <br />
+    <br />
+    <hr />
+    <div class=" rubrik" style="margin-left: 55px; ">
+        <h3>Senaste nytt</h3>
+
+        <br />
+        <div class="nyhet" style="text-align: center; margin-right: 5%;">
+            <h2>Glad påsk!</h2>
+            <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+            <p style="text-align:right;">2017-04-12</p>
         </div>
-   
-  
+       <a>Se fler nyheter >></a>
+            
+</div>
     </div>
  
  
