--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -7,13 +7,19 @@
     <h2>Om oss</h2>
 </center>
     <div class="maincontainer1">
-        <center>
-        <img class="img-responsive" src="~/Content/Images/omossbild.jpg" alt="">
-</center>
+        <br />
+        <br />
+        <div class="col-lg-7" style="padding-right: 40px; border-right: 2px solid #cacaca; margin-left:30px;"> 
+           
+            <center>
+            <img class="img-responsive" src="~/Content/Images/omossbild.jpg" alt="">
+            </center>
+          
+        </div>
+        
+      <br />
 
-
-
-    <div class="row">
+        <div class="row">
         <div class="col-sm-4">
             <h3>Studentboende</h3>
             <p>Lorem ipsum dolor..</p>
