--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -6,41 +6,73 @@
 <center><h2>Studentboende</h2></center>
 
 <div class="maincontainer1">
-    <div class="maincontainer">
+    
         <div class="row">
-            <div class="col-md-4">
-                <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
-            </div>
-            <div class="col-md-4">
-                <p>
-                    <b>Område:</b> Örebro Norr <br />
-                    <b>Adress:</b> Rynningegatan 1-7 <br />
-                    <b>Antal lägenheter i fastigheten:</b> 20<br />
-                    <br />
-                    1 Ledig lägenhet i fastigheten<br />
-                    Gå till lediga lägenheter.
-                </p>
+            <div class="col-md-6">     
+                <div class="row">
+                    <div class="col-md-4">
+                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <b>Område:</b> Örebro Norr <br />
+                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Antal lägenheter i fastigheten:</b> 20<br />
+                            <br />
+                            1 Ledig lägenhet i fastigheten<br />
+                            Gå till lediga lägenheter.
+                        </p>
+                   </div>
                 </div>
-
-                <div class="col-xs-6 col-sm-3">
+                <br />
+                <br />
+                <hr size="2" color="black">
+                <div class="row">
+                    <div class="col-md-4">
+                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <b>Område:</b> Örebro Norr <br />
+                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Antal lägenheter i fastigheten:</b> 20<br />
+                            <br />
+                            1 Ledig lägenhet i fastigheten<br />
+                            Gå till lediga lägenheter.
+                        </p>
+                    </div>
+                </div>
+                <br />
+                <br />
+                <hr size="2" color="black">
+                <div class="row">
+                    <div class="col-md-4">
+                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <b>Område:</b> Örebro Norr <br />
+                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Antal lägenheter i fastigheten:</b> 20<br />
+                            <br />
+                            1 Ledig lägenhet i fastigheten<br />
+                            Gå till lediga lägenheter.
+                        </p>
+                    </div>
+                </div>
+            </div>
+           <div class="col-md-6">
                     <div id="myCarousel1" class="carousel slide" data-interval="false">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
                             <li class="item1 active"></li>
                             <li class="item2"></li>
                             <li class="item3"></li>
-                            <li class="item4"></li>
-                            <li class="item5"></li>
+                            
                         </ol>
                         <div class="carousel-inner" role="listbox">
+                                                   
                             <div class="item active">
-                                <img src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt="Chania">
-                            </div>
-
-                            <div class="item">
-                                <img src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt="Chania">
-                            </div>
-                            <div class="item">
                                 <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
                             </div>
                             <div class="item">
@@ -72,7 +104,7 @@
             </div>
         </div>
 </div>
-</div>
+
 <script>
     $(document).ready(function () {
         // Activate Carousel
