--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -22,9 +22,11 @@
                             1 Ledig lägenhet i fastigheten<br />
                             Gå till lediga lägenheter.
                         </p>
+                        <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+
                    </div>
                 </div>
-                <br />
+                
                 <br />
                 <hr size="2" color="black">
                 <div class="row">
@@ -40,9 +42,11 @@
                             1 Ledig lägenhet i fastigheten<br />
                             Gå till lediga lägenheter.
                         </p>
+                        <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+
                     </div>
                 </div>
-                <br />
+                
                 <br />
                 <hr size="2" color="black">
                 <div class="row">
@@ -58,6 +62,8 @@
                             1 Ledig lägenhet i fastigheten<br />
                             Gå till lediga lägenheter.
                         </p>
+                        <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+
                     </div>
                 </div>
             </div>
@@ -90,6 +96,19 @@
                             <span class="glyphicon glyphicon-chevron-right"></span>
                         </a>
                     </div>
+
+               <div>
+                   <h3>Bra länkar för dig som student</h3>
+                   <h5>
+                       <a href="https://www.willys.se/Vara-butiker/Butiker/Willys-Orebro-Almby/">Willys</a><br />
+                       <a href="http://bibliotek.orebro.se/">Stadsbiblioteket</a><br />
+                       <a href="http://www.lanstrafiken.se/Orebro/">Busstidtabell i Örebro</a><br />
+                       <a href="http://www.xn--ob-eka.se/information/kundservice/vara-varuhus/oob-orebro">ÖoB</a><br />
+                       <a href="https://www.sj.se/">SJ</a>
+                   </h5>
+
+               </div>
+
                 </div>
             </div>
         <div class="row">
