länkar. rätt bilder. osv

--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -11,18 +11,18 @@
             <div class="col-md-6">     
                 <div class="row">
                     <div class="col-md-4">
-                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                        <center><img class="img-responsive" src="~/Content/Images/erikrosenbergsväg.PNG" alt=""></center>
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <b>Område:</b> Örebro Norr <br />
-                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Område:</b> Örebro Almby <br />
+                            <b>Adress:</b> Erik RosenbergsVäg 1 <br />
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
                             Gå till lediga lägenheter.
                         </p>
-                        <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/MEbdAJ2D9Wq" target="_blank"> Hitta hit</a>
 
                    </div>
                 </div>
@@ -31,18 +31,18 @@
                 <hr size="2" color="black">
                 <div class="row">
                     <div class="col-md-4">
-                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                        <center><img class="img-responsive" src="~/Content/Images/salsmästargatan.PNG" alt=""></center>
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <b>Område:</b> Örebro Norr <br />
-                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Område:</b> Örebro Öster <br />
+                            <b>Adress:</b> Salsmästaregatan 24-52 <br />
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
                             Gå till lediga lägenheter.
                         </p>
-                        <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/hnWNAPiqa7y" target="_blank"> Hitta hit</a>
 
                     </div>
                 </div>
@@ -51,18 +51,18 @@
                 <hr size="2" color="black">
                 <div class="row">
                     <div class="col-md-4">
-                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                        <center><img class="img-responsive" src="~/Content/Images/tärnvägen.PNG" alt=""></center>
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <b>Område:</b> Örebro Norr <br />
-                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Område:</b> Örebro Almby <br />
+                            <b>Adress:</b> Tärnvägen 12-20 <br />
                             <b>Antal lägenheter i fastigheten:</b> 20<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
                             Gå till lediga lägenheter.
                         </p>
-                        <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
+                        <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/GS7HuXL1pwj" target="_blank"> Hitta hit</a>
 
                     </div>
                 </div>
