--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "FragorOchSvar";
 }
 
-<center><h2>Frågor Och Svar</h2></center>
+<center><h2 class="sidrubrik">Frågor och svar</h2></center>
 
 <div class="maincontainer1">
    <div class=" maincontainer">
