--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -17,9 +17,11 @@
         <div style=" text-align: center;"><h2 class="sidrubrik">Startsida</h2></div>
 
 <div class="maincontainer1">
+    <br />
+    <br />
     <div class="col-lg-12">
         <p style="font-size:x-large; text-align:center;">
-            Att hyra din bostad är en grym boendeform som ger dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!
+            Att hyra din bostad är en grym boendeform som ger dig <span style="color: #e93523">trygghet</span>, <span style="color: #e93523">frihet</span> och <span style="color: #e93523">service</span>!
         </p>
 <br />
         <br />
@@ -27,7 +29,7 @@
     <div class="row">
         <div class="col-md-6 förstadiven">
             <div class="col-md-12">
-    <h2 style="text-align: left; color:#e95123">Varför ska man hyra av oss?</h2>
+    <h2 style="text-align: left; color: #e93523">Varför ska man hyra av oss?</h2>
     <div>
         <p>Vi har ägande, skötsel och drift i egen regi.</p>
         <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
@@ -76,7 +78,7 @@
                 </div>
             </div>
 
-            <h2 style="text-align:center; color:#e95123">För folk som tycker om att bo!</h2>
+            <h2 style="text-align: center; color: #e93523">För folk som tycker om att bo!</h2>
               
             </div>
         <div class="col-md-4 facebook">
@@ -97,10 +99,23 @@
         <br />
         <div class="nyhet" style="text-align: center; margin-right: 5%;">
             <h2>Glad påsk!</h2>
-            <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+            <p style="text-align:left;">
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+
+                <br />
+                <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+            </p>
             <p style="text-align:right;">2017-04-12</p>
         </div>
-       <a>Se fler nyheter >></a>
+        <a class="link" href="~/Home/Nyheter">Se fler nyheter >></a>
+      
             
 </div>
     </div>
