--- a/design/design/Views/Home/Nyheter.cshtml
+++ b/design/design/Views/Home/Nyheter.cshtml
@@ -8,15 +8,42 @@
     <div class="maincontainer1">
     <br />
     <br />
-    <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
-        <h2>Glad påsk!</h2>
-        <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-        <p style="text-align:right;">2017-04-12</p>
-    </div>
-    <br />
-    <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
-        <h2>Glad påsk!</h2>
-        <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-        <p style="text-align:right;">2017-04-10</p>
-    </div>
+        <br />
+        <br />
+
+        <div class=" row">
+            <div class=" col-md-3 nyhetsarkiv">
+                <div>
+                    <p><b>Nyhetsarkiv</b></p>
+                    <a class="link" href="#" style="text-align:left">April 2017</a><br />
+                    <a class="link" href="#" style="text-align:left">Mars 2017</a><br />
+                </div>
+            </div>
+            <div class=" col-md-9">
+                <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
+                    <h2>Glad påsk!</h2>
+                    <p style="text-align:left;">
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+
+                        <br />
+                        <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    </p>
+                    <p style="text-align:right;">2017-04-12</p>
+                </div>
+                <br />
+                <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
+                    <h2>Glad påsk!</h2>
+                    <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                    <p style="text-align:right;">2017-04-10</p>
+                </div>
+            </div>
+         
+        </div>
 </div>
