--- a/design/design/Views/Home/seriorboende.cshtml
+++ b/design/design/Views/Home/seriorboende.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "seriorboende";
 }
 
-<center><h2>Seniorboende 55+</h2></center>
+<center><h2 class="sidrubrik">Seniorboende 55+</h2></center>
 
 <div class="maincontainer1">
     <div class="maincontainer">
