--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "studentboende";
 }
 
-<center><h2>Studentboende</h2></center>
+<center><h2 class="sidrubrik">Studentboende</h2></center>
 
 <div class="maincontainer1">
     
