--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -3,138 +3,109 @@
     ViewBag.Title = "Varafastigheter";
 }
 
-<center><h2>Våra fastigheter</h2></center>
+<center><h2 class="sidrubrik">Våra fastigheter</h2></center>
 
 <div class="maincontainer1">
-    <div class="maincontainer">
-
+    <div class="maincontainer row">
+        
         <div class="row">
-            <div class="col-sm-3 divleft">
-                <p>Läs mer om våra fastigheter</p>
-                <button class="btn btn-default btn-block" type="button" id="menu1" data-toggle="Studentboende">Studentboende</button><br />
-                <button class="btn btn-default btn-block" type="button" id="menu1" data-toggle="Seniorboende 55+">Seniorboende 55+</button><br />
+            <div class=" col-md-3 divfastigheter" >
+                <div>
+                <p><b>Läs mer om våra fastigheter</b></p>
+                <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br /><br />
+                <a class="link" href="~/Home/seriorboende"  style="text-align:left">Seniorboende 55+</a><br />
             </div>
-            <div class="col-sm-4">
-                <p>Visa fastigheter för:</p>
-                <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                        Alla områden
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Falun</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kumla</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Almby</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Väster</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Norr</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Centralt</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Studentboende</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Senior 55+</a></li>
-                    </ul>
-                   </div>
+            </div>
+
+            <div class=" col-md-8 divfastigheter2">
+                <div class="col-sm-4 divleft2">
+                    <p>Visa fastigheter för:</p>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                            Alla områden
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Falun</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kumla</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Almby</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Väster</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Norr</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Centralt</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Studentboende</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Senior 55+</a></li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="col-sm-3">
                     <p>Sök på adress</p>
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
-                                Adress
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Badhusgatan</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kungsgatan</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Skolgatan</a></li>
-                                
-                            </ul>
-                        </div>
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                            Adress
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Badhusgatan</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kungsgatan</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Skolgatan</a></li>
 
-
-                    </p>
-                </div>
-
-            </div>
-        <legend>3 Fastigheter</legend>
-       
-            <br />
-            <div class="row">
-                <div class="col-sm-4">
-                    <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
-                </div>
-                <div class="col-sm-4">
-                    <br />
-                    <p>
-                        <b>Område:</b> Örebro Norr <br />
-                        <b>Adress:</b> Rynningegatan 1-7 <br />
-                        <b>Antal lägenheter i fastigheten:</b> 20<br />
-                        <br />
-                        1 Ledig lägenhet i fastigheten<br />
-                        Gå till lediga lägenheter.
-                    </p>
-
-                </div>
-
-                <div class="col-sm-3">
-                    <style>
-                        .google-maps {
-                            position: relative;
-                            padding-bottom: 75%;
-                            //This is the aspect ratio height: 0;
-                            overflow: hidden;
-                        }
-
-                            .google-maps iframe {
-                                position: absolute;
-                                top: 0;
-                                left: 0;
-                                width: 100% !important;
-                                height: 100% !important;
-                            }
-                    </style>
-
-                    <div class="google-maps">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
+                        </ul>
                     </div>
                 </div>
+
                 <br />
-        <hr size="1" color="#996633">
-                <div class="row">
-                    <div class="col-sm-4">
+                <br />
+                <br />
+                <legend>3 Fastigheter</legend>
+                <div class="row divfastigheter3 objekt">
+                    
+                    <div class="col-md-4">
+                        <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                    </div>
+                    <div class="col-md-5">
+                        <br />
+                        <p>
+                            <b>Område:</b> Örebro Norr <br />
+                            <b>Adress:</b> Rynningegatan 1-7 <br />
+                            <b>Antal lägenheter i fastigheten:</b> 20<br />
+                            <br />
+                            1 Ledig lägenhet i fastigheten<br />
+                        </p>
+                        <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
+
+                    </div>
+
+                    <div class="col-md-3">
+                        <br />
+
+                        <div class="google-maps">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+              
+                <hr size="1" color="#996633">
+                <div class="row objekt">
+                    <div class="col-md-4">
                         <center><img class="img-responsive" src="~/Content/Images/Brandstationen 6 - 3.jpg" alt=""></center>
                     </div>
-                    <div class="col-sm-4">
-                       <br />
-                         <p>
+                    <div class="col-md-5">
+                        <br />
+                        <p>
                             <b>Område:</b> Örebro Centralt <br />
                             <b>Adress:</b> Badhusgatan 1-3 <br />
                             <b>Antal lägenheter i fastigheten:</b> 15<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
-                            Gå till lediga lägenheter.
                         </p>
-
+                        <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
                     </div>
 
-                    <div class="col-sm-3">
-                        <style>
-                            .google-maps {
-                                position: relative;
-                                padding-bottom: 75%;
-                                //This is the aspect ratio height: 0;
-                                overflow: hidden;
-                            }
-
-                                .google-maps iframe {
-                                    position: absolute;
-                                    top: 0;
-                                    left: 0;
-                                    width: 100% !important;
-                                    height: 100% !important;
-                                }
-                        </style>
+                    <div class="col-md-3">
+                        <br />
 
                         <div class="google-maps">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -142,50 +113,34 @@
 
                     </div>
                 </div>
-        <br />
-        <hr size="1" color="#996633">
-        <div class="row">
-            <div class="col-sm-4">
-                <center><img class="img-responsive" src="~/Content/Images/Blaslampan 2 - 1.jpg" alt=""></center>
-            </div>
-            <div class="col-sm-4">
-                <br />
-                <p>
-                    <b>Område:</b> Örebro Centralt <br />
-                    <b>Adress:</b> Slottsgatan 7 <br />
-                    <b>Antal lägenheter i fastigheten:</b> 40<br />
-                    <br />
-                    1 Ledig lägenhet i fastigheten<br />
-                    Gå till lediga lägenheter.
-                </p>
+               
+                <hr size="1" color="#996633">
+                <div class="row objekt">
+                    <div class="col-md-4">
+                        <center><img class="img-responsive" src="~/Content/Images/Blaslampan 2 - 1.jpg" alt=""></center>
+                    </div>
+                    <div class="col-md-5">
+                        <br />
+                        <p>
+                            <b>Område:</b> Örebro Centralt <br />
+                            <b>Adress:</b> Slottsgatan 7 <br />
+                            <b>Antal lägenheter i fastigheten:</b> 40<br />
+                            <br />
+                            1 Ledig lägenhet i fastigheten<br />
+                        </p>
+                        <a class="link" href="~/Home/LedigaObjekt">Gå till lediga objekt >></a>
+                    </div>
 
-            </div>
+                    <div class="col-md-3">
+                        <br />
+                        <div class="google-maps">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
 
-            <div class="col-sm-3">
-                <style>
-                    .google-maps {
-                        position: relative;
-                        padding-bottom: 75%;
-                        //This is the aspect ratio height: 0;
-                        overflow: hidden;
-                    }
-
-                        .google-maps iframe {
-                            position: absolute;
-                            top: 0;
-                            left: 0;
-                            width: 100% !important;
-                            height: 100% !important;
-                        }
-                </style>
-
-                <div class="google-maps">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
                 </div>
-
             </div>
         </div>
-
                 </div>
     </div>
         
