--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -4,7 +4,7 @@
 }
 
 <center>
-    <h2>Om oss</h2>
+    <h2 class ="sidrubrik">Om oss</h2>
 </center>
     <div class="maincontainer1">
         <br />
@@ -20,21 +20,25 @@
       <br />
 
         <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 omoss">
             <h3>Studentboende</h3>
             <p>Lorem ipsum dolor..</p>
-            <p>LÄNK</p>
+            <a href="~/Home/studentboende">Läs mer om studentboende</a>
+          
         </div>
-        <div class="col-sm-4">
-            <h3>Seniorboende Nära till</h3>
+        <div class="col-sm-4 omoss">
+            <h3>Seniorboende 55+ Nära till</h3>
             <p>Vi hoppas att ditt besök på vår hemsida ska ge dig en bra bild av vad du kan vänta dig av att bo i en av våra lägenheter.
                Hos oss på Nära Till blir livet lite enklare och trevligare. Närheten till andra seniorer, ett rikt utbud av aktiviteter, gemensamhetslokal och vår hjälpsamma värdinna gör att det är lätt att trivas.</p>
-            <p>LÄNK</p>
+
+            <a href="~/Home/seriorboende">Läs mer om seniorboende</a>
+            
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 omoss">
             <h3>EP-Fastigheter</h3>
             <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
-            <p>LÄNK</p>
+            
+            <a href="http://www.epfastigheter.se/">Läs mer på EP-fastigeheters egen hemsida</a>
         </div>
     </div>
 </div>
